main/production/namespaces/backend/fundhub-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fundhub-api
spec:
  selector:
    matchLabels:
      app: fundhub-api
  template:
    metadata:
      labels:
        app: fundhub-api
        version: "1.0"
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: fundhub-api
          image: titan29/fundhub-api:21
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
            requests:
              memory: "32Mi"
              cpu: "10m"
          ports:
            - containerPort: 8000
