main/production/namespaces/backend/fundhub-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fundhub-api-svc
spec:
  selector:
    app: fundhub-api
  ports:
  - port: 8000
    targetPort: 8000
