main/production/namespaces/backend/fundhub-api/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fundhub-api-svc-destinationrule
spec:
  host: fundhub-api-svc.backend.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: "1.0"
  - name: v2
    labels:
      version: "2.0"
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
