main/production/namespaces/backend/fundhub-api/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-fundhub-be
spec:
  hosts:
    - "fundhub-api-svc.backend.svc.cluster.local"
  http:
    - name: "fundhub-canary-deployment"
      route:
        - destination:
            host: fundhub-api-svc.backend.svc.cluster.local
            subset: v1
          weight: 60
        - destination:
            host: fundhub-api-svc.backend.svc.cluster.local
            subset: v2
          weight: 40
